pod-namespace.yml
---
apiVersion: v1
kind: Pod

metadata:
 name: ghost-pod
 labels:
  author: intelliqit
 namespace: test-ns
spec:
 containers:
  - name: ghost
    image: ghost
