volumes.yml
---
apiVersion: v1
kind: Pod

metadata:
 name: redis-pod
 labels:
  author: intelliqit
spec:
 containers:
  - name: redis
    image: redis
    volumeMounts:
     - name: redis-storage
       mountPath: /data/redis
 volumes:
  - name: redis-storage
    emptyDir: {}
