volumes1.yml
apiVersion: v1
kind: Pod
metadata:
 name: redis
spec:
 containers:
  - name: redis
    image: redis
    volumeMounts:
     - name: redis-storage
       mountPath: /data/redis
 volumes:
  - name: redis-storage
    emptyDir: {}
