ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: myingress
spec:
 rules:
  - http:
     paths:
      - path: /abc
        backend:
         name: nginx-service
         port:
          number: 80
