ingress1.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: myingress
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
